fixed text alignment and added script files for each page

--- a/styles.css
+++ b/styles.css
@@ -1,52 +1,59 @@
-
-#map{ 
-    height: 100%;
-    width: 100%;
-    }
+#map {
+  height: 100%;
+  width: 100%;
+}
 
 .linke-seite {
-    height: 100vh;
-    width: 20%;
-    background-color :#FF6C6C;
-    
-    float: left;
+  height: 100vh;
+  width: 20%;
+  background-color: #ff6c6c;
+
+  float: left;
 }
-.rechte-seite{
-    height:50vh;
-    width: 80%;
-    float:right;
+.rechte-seite {
+  height: 50vh;
+  width: 80%;
+  float: right;
 }
 .jellow-box-1 {
-    height: 50px;
-    width: 100%;
-    background-color: #ffff00;
-    margin-top: 100px;
-    text-align: center;
+  height: 50px;
+  width: 100%;
+  background-color: #ffff00;
+  margin-top: 100px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .jellow-box-2 {
-    height: 50px;
-    width: 100%;
-    background-color: #ffff00;
-    margin-top: 50px;
-    text-align: center;
+  height: 50px;
+  width: 100%;
+  background-color: #ffff00;
+  margin-top: 50px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .jellow-box-3 {
-    height: 50px;
-    width: 20%;
-    background-color: #ffff00;
-    position: absolute;
-    text-align: center;
-    
-    bottom: 0px;
-    
+  height: 50px;
+  width: 20%;
+  background-color: #ffff00;
+  position: absolute;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  bottom: 0px;
 }
-a{
-    color: black;
-    font-size: 30px;
+.button-text {
+  color: black;
+
+  font-size: 30px;
 }
-body{
+body {
   margin: 0px;
 }
-.site_content{
+.site_content {
   justify-content: row;
 }
